k8s-config/kustomize/base/skaha/config/service-notebook.yaml
apiVersion: v1
kind: Service
metadata:
  name: skaha-notebook-svc-${skaha.sessionid}
  labels:
    run: skaha-notebook-svc-${skaha.sessionid}
spec:
  ports:
  - port: 8888
    protocol: TCP
    name: http-connection
  selector:
    canfar-net-sessionID: ${skaha.sessionid}
