k8s-config/kustomize/base/skaha/config/ingress-notebook.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: notebook-ingress-${skaha.sessionid}
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /notebook/${skaha.sessionid}/$2
    nginx.ingress.kubernetes.io/proxy-body-size: 100g
    nginx.ingress.kubernetes.io/proxy-read-timeout: 3600s
    nginx.ingress.kubernetes.io/proxy-send-timeout: 3600s
    nginx.org/proxy-read-timeout: 3600s
    nginx.org/proxy-send-timeout: 3600s
spec:
  rules:
  - host: rc-uv.canfar.net
    http:
      paths:
      - path: /notebook/${skaha.sessionid}(/|$)(.*)
        backend:
          serviceName: skaha-notebook-svc-${skaha.sessionid}
          servicePort: 8888
